# agent-data-cli

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README_en.md  README_zh.md  adc.py  cli.py  pyproject.toml
.github/workflows/: publish-to-pypi.yml
cli/: formatters.py  help.py  main.py
cli/commands/: __init__.py  channel.py  common.py  config.py  content.py  dashboard.py  group.py  help.py  source.py  specs.py  sub.py
cli/commands/content/: __init__.py  common.py  interact.py  query.py  search.py  update.py
core/: base.py  capabilities.py  config.py  discovery.py  manifest.py  models.py  protocol.py  registry.py  source_defaults.py
dashboard/: context.py  index.py  runtime.py  state.py
dashboard/adapters/: channel.py  config.py  content.py  group.py  help.py  source.py
dashboard/pages/: 01_Source.py  02_Channel.py  03_Content_Search.py  04_Content_Query.py  05_Content_Update.py  06_Sub.py  07_Group.py  08_Config.py  09_Help.py
dashboard/widgets/: common.py  tables.py
docs/superpowers/specs/: 2026-03-12-data-cli-core-redesign-design.md
fetchers/: base.py  browser.py  http.py  jina.py
skills/authoring-data-cli-source/: SKILL.md
skills/using-data-cli/: SKILL.md
sources/ashare/: source.py
sources/bbc/: source.py
sources/cryptocompare/: source.py
sources/data_hub/: source.py
sources/hackernews/: source.py
sources/rsshub/: source.py
sources/sina_finance_724/: source.py
sources/usstock/: source.py
sources/wechatarticle/: source.py
src/agent_data_cli/: PYPI_README.md  __main__.py  init_service.py  main.py  migration.py  runtime_paths.py
src/agent_data_cli/bootstrap/data_hub/: source.py
src/agent_data_cli/cli/: formatters.py  help.py  main.py
src/agent_data_cli/cli/commands/: __init__.py  channel.py  common.py  config.py  dashboard.py  group.py  help.py  hub.py  init.py  source.py  specs.py  sub.py
src/agent_data_cli/cli/commands/content/: __init__.py  common.py  interact.py  query.py  search.py  update.py
src/agent_data_cli/core/: base.py  capabilities.py  config.py  discovery.py  help.py  manifest.py  models.py  protocol.py  registry.py  source_defaults.py
src/agent_data_cli/dashboard/: context.py  index.py  runtime.py
src/agent_data_cli/dashboard/adapters/: channel.py  config.py  content.py  help.py  source.py  sub.py
src/agent_data_cli/dashboard/pages/: 01_Source.py  02_Channel.py  03_Content_Search.py  04_Content_Query.py  05_Content_Update.py  06_Sub.py  07_Group.py  08_Config.py  09_Help.py
src/agent_data_cli/dashboard/widgets/: common.py  forms.py
src/agent_data_cli/fetchers/: base.py  browser.py
src/agent_data_cli/hub/: __init__.py  models.py  service.py
src/agent_data_cli/store/: audit.py  channels.py  configs.py  content.py  db.py  groups.py  health.py  repositories.py  subscriptions.py
src/agent_data_cli/utils/: text.py  time.py
store/: audit.py  channels.py  configs.py  content.py  db.py  groups.py  health.py  migrations.py  repositories.py  subscriptions.py
utils/: time.py  urls.py
